# mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: README.md  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  README.md  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  README.md  callfriendservice.cc  calluserservice.cc  userservice.cc
lib/include/: logqueue.h  mprpcchannel.h  mprpcconfig.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: logger.h  mprpcapplication.h  mprpcchannel.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
standalone_example/: test.pb.cc  test.pb.h  test.proto
standalone_example/callee/: CMakeLists.txt  provider_test.cc
standalone_example/caller/: CMakeLists.txt  consumer_test.cc
standalone_example/include/: rpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
